feat(gc): add Shenandoah, Serial, Epsilon, ZGC non-generational
Extends the GcAlgorithm enum and the JVM-flag builder with three
new collectors and one variant of an existing one. All four are
present in Eclipse Temurin 17 and 21; no parser change is required
since they all emit the unified -Xlog:gc* format.

Code
- gc-forge-scenario::GcAlgorithm: add Shenandoah, Serial, Epsilon.
  JSON Schemas regenerated.
- gc-forge-runner::flags: emit the corresponding flags. Shenandoah
  honours pause_target_ms. Epsilon unlocks experimental options
  before UseEpsilonGC. ZGC's `generational: false` now emits the
  explicit -XX:-ZGenerational (was previously a silent omission).
- 6 new unit tests covering the new algorithms, the explicit-false
  ZGC case, and the unlock-then-use ordering for Epsilon.

Presets (7 new, total 21)
- steady-shenandoah-baseline, leak-shenandoah-slow.
- steady-serial-baseline (256 MiB heap), cache-serial-churn.
- epsilon-baseline — negative case, no collection expected.
- epsilon-leak-pure — deterministic OOM (heap_max / leak_rate).
- steady-zgc-nongen-baseline — non-generational ZGC variant.

Documentation
- README.md: status table updated (6 collectors, 21 presets).
- doc/concepts/overview.md: collector and preset counts updated.
- doc/concepts/traceability.md: new presets added to phenomenon
  rows; new `no_collection` row for the Epsilon false-positive
  guard.
- doc/user/scenario-reference.md: per-algorithm flag emission
  documented.
- doc/user/regimes.md: R1, R4, R5 sections enumerate the new
  presets and explain the negative-baseline use of Epsilon.
- CHANGELOG.md: [Unreleased] entry.

End-to-end smoke verified on the four new code paths against
Temurin 21:
- Shenandoah produced 24 pauses in 15 s (low-millisecond, with
  update-references phase visible).
- Serial produced 10 pauses ("Pause Young (Allocation Failure)").
- Epsilon produced zero pauses (27-line log, init + shutdown only).
- ZGC non-generational announced "Using legacy single-gener